--- a/cwierkaczApp/app/src/main/AndroidManifest.xml
+++ b/cwierkaczApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.cwierkaczapp">
 
     <application
+        android:name="androidx.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
