--- a/cwierkaczApp/app/src/main/AndroidManifest.xml
+++ b/cwierkaczApp/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:theme="@style/Theme.CwierkaczApp">
         <activity
             android:name=".HomeActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".LoginActivity"
             android:exported="true"
