--- a/cwierkaczApp/app/build.gradle
+++ b/cwierkaczApp/app/build.gradle
@@ -36,6 +36,11 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:32.0.0-alpha3'
+    implementation "com.android.support:cardview-v7:32.0.0-alpha3"
+    implementation 'com.android.support:recyclerview-v7:32.0.0-alpha3'
+    implementation 'com.android.support:design:32.0.0-alpha3'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
@@ -43,7 +48,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     testImplementation 'junit:junit:4.+'
 
-    implementation 'com.android.support:design:32.0.0'
+    implementation 'com.android.support:design:32.0.0-alpha3'
+
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
